--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
+       
+       
+   	     <dependency>
+           <groupId>org.bukkit</groupId>
+           <artifactId>craftbukkit</artifactId>
+           <version>1.8.8-R0.1-SNAPSHOT</version>
+           <type>jar</type>
+           <scope>provided</scope>
+       </dependency>
    </dependencies>
   
   
