added ban capabilities

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -43,3 +43,10 @@ commands:
       description: Use this to only talk to your team!
       usage: /<command> [message]
       aliases: [t] 
+   helpop:
+      description: Use this to talk to the moderators and admins!
+      usage: /<command> [message]
+   playerban:
+      description: Use this to talk to the moderators and admins!
+      usage: /<command> [player] [reason]
+      aliases: [pban, pb]
