added health command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,6 +30,9 @@ commands:
    vote:
       description: Use this to vote for a poll!
       usage: /<command> [option] 
+   health:
+      description: Use this to get the health of a player!
+      usage: /<command> [player] 
    info:
       description: Use this to learn the gamemodes!
       usage: /<command> [gamemode] 
@@ -45,7 +48,7 @@ commands:
       usage: /<command> [message]
    help:
       description: Use this to understand commands!
-      usage: /<command> [message]
+      usage: /<command> [query]
    playerban:
       description: Use this to talk to the moderators and admins!
       usage: /<command> [player] [reason]
